<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/insert_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".InsertActivity">
        <include layout="@layout/icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/InsertActivity_header"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/askID"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:hint="@string/InsertActivity_getID"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="?attr/colorSecondary"
            android:autofillHints=""/>
        <EditText
            android:id="@+id/askPolynomial"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:hint="@string/InsertActivity_getFunction"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="?attr/colorSecondary"
            android:autofillHints=""/>
        <Button
            android:id="@+id/insert"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/InsertActivity_insert"/>
        <include
            layout="@layout/button_back"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InsertActivity_help"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textAlignment="center"/>
    </LinearLayout>
</ScrollView>