<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <include layout="@layout/icon"/>

        <TextView
            android:id="@+id/debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/insert"
                android:layout_width="wrap_content"
                android:minWidth="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MainActivity_insert" />

            <Button
                android:id="@+id/list"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MainActivity_browse" />

            <Button
                android:id="@+id/search"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MainActivity_search" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>