<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BrowseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BrowseActivity_header"
        android:textAlignment="center"
        android:textSize="32sp"
        android:id="@+id/header"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:id="@+id/empty"
        android:text="@string/BrowseActivity_empty"/>


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteAll"
            android:layout_width="192dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="#B00020"
            android:text="@string/BrowseActivity_deleteAll"
            android:textColor="@color/background" />

        <include layout="@layout/button_back"
            android:layout_gravity="center"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1" />
    </GridLayout>

</LinearLayout>